# HMIR

./: .cspell.json  .gitignore  Cargo.toml  LICENSE  README.md  download_model.py
.github/workflows/: ci.yml
crates/hmir-e2e/: Cargo.toml
crates/hmir-e2e/src/: main.rs
deploy/: Dockerfile.multi  docker-compose.yml
deploy/packaging/hmir-cli/: Cargo.toml
deploy/packaging/hmir-cli/src/: main.rs
deploy/packaging/hmir-cli/src/commands/: clean.rs  integrations.rs  logs.rs  mod.rs  pull.rs  smi.rs  start.rs  status.rs  suggest.rs
docs/: ARCHITECTURE.md
hmir-api/: Cargo.toml
hmir-api/src/: build_ui.ps1  index.html  main.rs  ui_css.css  ui_js.js  ui_shell.html
hmir-bench/: Cargo.toml
hmir-bench/src/: main.rs
hmir-core/: Cargo.toml
hmir-core/benches/: paged_kv.rs
hmir-core/src/: lib.rs
hmir-core/src/adapters/: lora_manager.rs  mod.rs
hmir-core/src/memory/: allocator.rs  compactor.rs  mod.rs  prefix_cache.rs  swap.rs
hmir-core/src/orchestrator/: draft_verify.rs  mod.rs
hmir-core/src/platform/: fallback_matrix.rs  mod.rs
hmir-core/src/scheduler/: continuous_batcher.rs  mod.rs  priority_queue.rs
hmir-core/src/security/: sandbox.rs
hmir-core/src/telemetry/: mod.rs  task_registry.rs
hmir-core/src/topology/: draft_policy.rs  mapper.rs  mod.rs
hmir-dashboard/: Cargo.toml
hmir-dashboard/src/: main.rs
hmir-hardware-prober/: Cargo.toml
hmir-hardware-prober/src/: lib.rs
hmir-pyo3/: Cargo.toml
hmir-pyo3/src/: lib.rs
hmir-sys/src/: ffi_mlx.rs  ffi_rocm.rs  lib.rs
hmir-sys/src/backends/: llama_adapter.rs  mlx_adapter.rs  mod.rs  paged.rs  rocm_adapter.rs  trt_adapter.rs
scratch/: clean_file.ps1
scripts/: check_npu_engines.ps1  download_llama3_ov.ps1  download_npu_model.py  download_phi3_robust.ps1  hmir_npu_service.py  hmir_npu_worker.py  install.ps1  install.sh  test_npu.ps1
