[workspace]
members = [
    "hmir-core",
    "hmir-sys",
    "hmir-pyo3",
    "hmir-dashboard",
    "hmir-hardware-prober",
    "hmir-api",
    "hmir-bench",
    "deploy/packaging/hmir-cli",
    "crates/hmir-e2e",
    "deploy/packaging/hmir-cli"
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
