# Cargo.toml (root workspace)
[workspace]
resolver = "2"
members = [
    "hmir-core",
    "hmir-sys",
    "hmir-api",
    "hmir-dashboard",
    "hmir-hardware-prober",
    "hmir-bench",
    "hmir-pyo3",
    "crates/hmir-e2e",
    "deploy/packaging/hmir-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Kunal Bhatt"]
homepage = "https://github.com/bhattkunalb/HMIR"
repository = "https://github.com/bhattkunalb/HMIR"
documentation = "https://github.com/bhattkunalb/HMIR#readme"
keywords = ["llm", "inference", "npu", "gpu", "local-ai"]
categories = ["science::ai", "hardware-support"]

[workspace.dependencies]
# Core async/runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/API
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory/FFI
dashmap = "5.5"
metrics = "0.22"
mmap = "0.1"
thiserror = "1.0"

# UI
egui = "0.26"
eframe = "0.26"
egui_plot = "0.26"

# Backend FFI (bundled, no external install required)
# Uncomment once the bundled sys crates are generated:
# llama-cpp-sys = { path = "hmir-sys/llama-cpp-sys" }
# onnxruntime-sys = { path = "hmir-sys/onnxruntime-sys" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Optional: Enable for crates.io publish
# [workspace.metadata.publish]
# enabled = false  # Set to true + run `cargo publish` when ready

# Note: Feature flags (dashboard, openai-api, hardware-prober, etc.)
# are defined in each crate's own Cargo.toml, not at the workspace level.
