[package]
name = "hmir-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hmir-core = { path = "../hmir-core" }
axum = "0.7.4"
tokio = { version = "1.28", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
