[package]
name = "hmir-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hmir-core = { path = "../hmir-core" }
hmir-hardware-prober = { path = "../hmir-hardware-prober" }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.28", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
async-stream = "0.3"
chrono = { version = "0.4.44", features = ["clock"] }
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { workspace = true, features = ["stream", "json"] }
lazy_static = "1.4"
dirs = "5.0"
