[package]
name = "hmir-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "hmir"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
hmir-hardware-prober = { path = "../../../hmir-hardware-prober" }
hmir-core = { path = "../../../hmir-core" }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
futures-util = "0.3"
webbrowser = "0.8"
